--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "vue2",
+  "name": "admin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "element-ui": "npm i element-ui -S"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "echarts": "^5.4.2",
+    "element-ui": "^2.15.13",
+    "js-cookie": "^3.0.1",
+    "vue": "^2.6.14",
+    "vue-loader": "^13.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,7 +25,7 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.5.2"
   },
   "eslintConfig": {
     "root": true,
