--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "start": "npm run serve",
     "element-ui": "npm i element-ui -S"
   },
   "dependencies": {
@@ -15,7 +16,8 @@
     "element-ui": "^2.15.13",
     "js-cookie": "^3.0.1",
     "vue": "^2.6.14",
-    "vue-loader": "^13.3.0"
+    "vue-loader": "^13.3.0",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
